--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="https://apis.google.com/js/api:client.js"></script> 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIyNyUVceInbDgeqycBJQX_IJdz55o9sE&libraries=places"></script>
   </body>
   
 </html>
