--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Good news, is the best news!">
+    <meta name="keywords" content="beritabaik, news">
+    <meta name="author" content="Berita Baik">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Berita Baik</title>
   </head>
