--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="keywords" content="beritabaik, news">
     <meta name="author" content="Berita Baik">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="twitter:image" content=" http://beritabaik.id/img/bb_ikon.png" id="metaTwImage">
-    <meta name="twitter:title" content="Berita Baik" id="metaTwTitle" >
-    <meta name="twitter:description" content="Berita Baik" id="metaTwDesc">
+    <meta name="twitter:image" content=" http://beritabaik.id/img/bb_ikon.png">
+    <meta name="twitter:title" content="Berita Baik"  >
+    <meta name="twitter:description" content="Berita Baik">
     <!-- <meta name="twitter:card" content="-" id="metaTwCard"> -->
-    <meta property="og:image" content="http://beritabaik.id/img/bb_ikon.png" id="metaOgImage">
-    <meta property="og:site_name" content="Berita Baik" id="metaOgSiteName"/>
-    <meta property="og:description" content="Berita Baik" id="metaOgDesc"/>
-    <meta property="og:url" content="http://beritabaik.id/" id="metaOgUrl">
+    <meta property="og:image" content="http://beritabaik.id/img/bb_ikon.png">
+    <meta property="og:site_name" content="beritabaik.id" />
+    <meta property="og:description" content="Berita Baik" />
+    <meta property="og:url" content="http://beritabaik.id/" >
     <meta property="og:type" content="news"/>
     <title>Berita Baik</title>
   </head>
