--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script type="text/javascript" src="https://apis.google.com/js/api:client.js"></script> 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN0keq9G9Hby59mKdWiNWSoTERyQhwX3w&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCN0keq9G9Hby59mKdWiNWSoTERyQhwX3w&libraries=places"></script> -->
   </body>
   
 </html>
