update meta viewport - prevent zoom

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="description" id="metaDesc" content="Good news, is the best news!">
     <meta name="keywords" content="beritabaik, news">
     <meta name="author" content="Berita Baik">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <meta name="twitter:image" content=" https://www.beritabaik.id/img/berita_baik_square.png">
     <meta name="twitter:title" content="Berita Baik"  >
     <meta name="twitter:description" content="Berita Baik">
