--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <meta property="og:type" content="news"/>
     <title>Berita Baik</title>
   </head>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script> (adsbygoogle = window.adsbygoogle || []).push({
+  google_ad_client: "ca-pub-8951545548090902",
+  enable_page_level_ads: true
+  });
+  </script>
   <script src=<%= htmlWebpackPlugin.options.path %>/static/tinymce4.7.5/tinymce.min.js></script>
   <body>
     <div id="app"></div>
